# namegen

./: .gitignore  Cargo.toml  LICENSE.md  README.md  readme.md
examples/: cfgrammar.rs  markov.rs  name.rs
examples/res/: info.txt
namegen/: Cargo.toml  readme.md
namegen-service/: Cargo.toml  readme.md  rocket.toml
namegen-service/src/: main.rs  store.rs
namegen-service/src/api/: format.rs  mod.rs  name.rs
namegen-wasm/: .gitignore  Cargo.toml  index.d.ts  index.js  package-lock.json  package.json  rollup.config.js
namegen-wasm/src/: lib.rs
namegen/examples/: cfgrammar.rs  markov.rs  name.rs
namegen/examples/res/: cfgrammar.txt  markov.txt  name.txt
namegen/src/: cfgrammar.rs  core.rs  formatting.rs  markov.rs  part.rs  sample.rs
src/: cfgrammar.rs  core.rs  formatting.rs  lib.rs  markov.rs  name.rs  part.rs  sample.rs  wordlist.rs
