[package]
name = "namegen-wasm"
version = "0.1.0"
authors = ["Gisle Aune <dev@gisle.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
stdweb = "0.4.20"
serde = {version = "1.0.104", features = ["derive"]}
serde_json = "1.0.44"
wasm-bindgen = "0.2.67"
namegen = {path = "../namegen", features = ["serde"]}