[package]
name = "namegen-wasm"
version = "0.1.0"
authors = ["Gisle Aune <dev@gisle.me>"]
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]
lto = true
opt-level = 's'

[profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]
lto = true
opt-level = 's'

[lib]
crate-type = ["cdylib"]

[features]
default = ["wee_alloc"]

[dependencies]
serde = {version = "1.0.104", features = ["derive"]}
serde_json = "1.0.44"
wasm-bindgen = {version = "0.2.67", features = ["serde-serialize"]}
namegen = {path = "../namegen", features = ["serde"]}
console_error_panic_hook = "0.1.6"
wee_alloc = {version = "0.4.5", optional = true}
