[package]
name = "namegen"
version = "0.1.2"
authors = ["Gissleh"]
edition = "2018"
description = "Fast name generator."
readme = "README.md"
license-file = "LICENSE.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = { version = "0.7.3", features = ["small_rng"] }
serde = { version = "^1.0.0", optional = true, features = ["derive"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
rand = { version = "0.7.3", features = ["small_rng", "wasm-bindgen"] }

[dev-dependencies]
time = "0.1.40"
serde_json = "1.0.44"
